# agentic-todo-evolution

./: .env.example  .gitignore  .mcp.json  .mcp.json.example  AGENTS.md  CLAUDE.md  CURRENT_STATUS.md  FINAL_TEST_REPORT.md  FINAL_VERIFICATION_REPORT.md  LICENSE  QUICKSTART.md  README.md  VERIFICATION_REPORT.md  practice.cpp  pyproject.toml  render.yaml  requirements.txt
.claude/: settings.local.json
.claude/agents/: backend-subagent.md  database-subagent.md  frontend-subagent.md
.claude/skills/: mcp-tools-skill.md  openai-agents-skill.md
.specify/memory/: constitution.md
apps/backend/: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml  requirements.txt
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 001_initial_schema.py
apps/backend/app/: __init__.py  database.py  main.py
apps/backend/app/auth/: __init__.py  better_auth_jwt.py  dependencies.py  jwt.py  password.py
apps/backend/app/models/: __init__.py  task.py  user.py
apps/backend/app/routers/: __init__.py  auth.py  chatkit.py  demo.py  tasks.py
apps/backend/app/schemas/: auth.py  task.py
apps/backend/mcp_server/: __init__.py  config.py  server.py
apps/backend/mcp_server/tools/: __init__.py  add_task.py  complete_task.py  list_tasks.py
apps/backend/mcp_server/utils/: __init__.py  auth.py  errors.py
apps/backend/tests/mcp/: __init__.py  conftest.py  test_add_task.py  test_complete_task.py  test_list_tasks.py
apps/frontend/: .env.example  .vercel-test  middleware.ts  next.config.js  package-lock.json  package.json  tailwind.config.ts
src/: main.py
src/todo/: cli.py  (+7 more)
tests/: conftest.py
(+77 files in other folders)
